--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,8 @@ hr {
 
 #features {
     padding: 0% 1% 8% 10.5%;
+    display: flex;
+    flex-direction: row;
 }
 
 * {
@@ -348,7 +350,7 @@ hr {
 }
 
 .col-4 > p {
-    color: hsl(270, 9%, 17%);
+    color: black;
     font-weight: 600;
 }
 
